force-app/main/default/objects/Lead/fields/Office_Type__c.field-meta.xml
<CustomField>
    <fullName>Office_Type__c</fullName>
    <label>Office Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Head Office</fullName>
            </value>
            <value>
                <fullName>Branch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>