force-app/main/default/objects/Lead/fields/Owner_Lead__c.field-meta.xml
<CustomField>
    <fullName>Owner_Lead__c</fullName>
    <formula>Owner:User.FirstName +  Owner:User.LastName</formula>
    <label>Owner Lead</label>
    <type>Text</type>
</CustomField>