force-app/main/default/objects/Lead/fields/Owner_USER_ID__c.field-meta.xml
<CustomField>
    <fullName>Owner_USER_ID__c</fullName>
    <formula>IF(Owner:User.USER_ID__c = $User.Id, TRUE, FALSE)</formula>
    <label>Owner USER ID</label>
    <type>Checkbox</type>
</CustomField>