force-app/main/default/objects/Lead/fields/Place_of_Established__c.field-meta.xml
<CustomField>
    <fullName>Place_of_Established__c</fullName>
    <label>Place of Established</label>
    <length>255</length>
    <type>Text</type>
</CustomField>