force-app/main/default/objects/Lead/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <description>Product type</description>
    <label>Product Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KPR</fullName>
            </value>
            <value>
                <fullName>Refinancing</fullName>
            </value>
            <value>
                <fullName>Flexi_Biz</fullName>
                <label>Flexi-Biz</label>
            </value>
            <value>
                <fullName>Flexi_In</fullName>
                <label>Flexi-In</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>