force-app/main/default/objects/Lead/fields/Referral_ID__c.field-meta.xml
<CustomField>
    <fullName>Referral_ID__c</fullName>
    <label>Referral ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>