force-app/main/default/objects/Lead/fields/SOA_Source_Id__c.field-meta.xml
<CustomField>
    <fullName>SOA_Source_Id__c</fullName>
    <description>SOA Source Id</description>
    <label>SOA Source Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>