force-app/main/default/objects/Lead/fields/Spouse_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>Spouse_ID_Number__c</fullName>
    <label>Spouse ID Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>