force-app/main/default/objects/Lead/fields/Spouse_Industry_Group__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Industry_Group__c</fullName>
    <label>Spouse Industry Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MULTIFINANCE</fullName>
            </value>
            <value>
                <fullName>KOPERASI</fullName>
            </value>
            <value>
                <fullName>PERBANKAN</fullName>
            </value>
            <value>
                <fullName>ASURANSI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>