force-app/main/default/objects/Lead/fields/Spouse_Industry_Type__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Industry_Type__c</fullName>
    <label>Spouse Industry Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1001001</fullName>
            </value>
            <value>
                <fullName>1002001</fullName>
            </value>
            <value>
                <fullName>1003001</fullName>
            </value>
            <value>
                <fullName>1003002</fullName>
            </value>
            <value>
                <fullName>1004001</fullName>
            </value>
            <value>
                <fullName>1004002</fullName>
            </value>
            <value>
                <fullName>1004003</fullName>
            </value>
            <value>
                <fullName>1004004</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>