force-app/main/default/objects/Lead/fields/Spouse_Job_Address__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Job_Address__c</fullName>
    <label>Spouse Job Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>