force-app/main/default/objects/Lead/fields/Spouse_Job_Level__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Job_Level__c</fullName>
    <label>Spouse Job Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>