force-app/main/default/objects/Lead/fields/Spouse_Monthly_Income__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Monthly_Income__c</fullName>
    <label>Spouse Monthly Income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>