force-app/main/default/objects/Lead/fields/Spouse_Nationality__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Nationality__c</fullName>
    <label>Spouse Nationality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WNI</fullName>
            </value>
            <value>
                <fullName>WNA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>