force-app/main/default/objects/Lead/fields/Spouse_NPWP_Number__c.field-meta.xml
<CustomField>
    <fullName>Spouse_NPWP_Number__c</fullName>
    <label>Spouse NPWP Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>