force-app/main/default/objects/Lead/fields/Spouse_Phone_1__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Phone_1__c</fullName>
    <label>Spouse Phone 1</label>
    <type>Phone</type>
</CustomField>