force-app/main/default/objects/Lead/fields/Spouse_Phone_2__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Phone_2__c</fullName>
    <label>Spouse Phone 2</label>
    <type>Phone</type>
</CustomField>