force-app/main/default/objects/Lead/fields/Spouse_Place_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Place_of_Birth__c</fullName>
    <label>Spouse Place of Birth</label>
    <length>255</length>
    <type>Text</type>
</CustomField>