force-app/main/default/objects/Lead/fields/Spouse_Profession__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Profession__c</fullName>
    <label>Spouse Profession</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pejabat Negara/Penyelenggara Negara</fullName>
            </value>
            <value>
                <fullName>Buruh Tani</fullName>
            </value>
            <value>
                <fullName>Hukum (Pengacara, Notaris)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>