force-app/main/default/objects/Lead/fields/Spouse_WNA_Country__c.field-meta.xml
<CustomField>
    <fullName>Spouse_WNA_Country__c</fullName>
    <label>Spouse_WNA Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Jepang</fullName>
            </value>
            <value>
                <fullName>Singapura</fullName>
            </value>
            <value>
                <fullName>Malaysia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>