force-app/main/default/objects/Lead/fields/Task_Counter__c.field-meta.xml
<CustomField>
    <fullName>Task_Counter__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Task Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>