force-app/main/default/objects/Lead/fields/User_Description__c.field-meta.xml
<CustomField>
    <fullName>User_Description__c</fullName>
    <label>Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>