force-app/main/default/objects/Lead/fields/Village__c.field-meta.xml
<CustomField>
    <fullName>Village__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Village</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Location.RecordTypeId</field>
            <operation>equals</operation>
            <value>Village</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Leads and Referrals (Kecamatan)</relationshipLabel>
    <relationshipName>Leads_and_Referrals2</relationshipName>
    <type>Lookup</type>
</CustomField>