force-app/main/default/objects/Lead/fields/Year_of_Established__c.field-meta.xml
<CustomField>
    <fullName>Year_of_Established__c</fullName>
    <label>Year of Established</label>
    <type>Date</type>
</CustomField>