force-app/main/default/objects/Lead/fields/Zip__c.field-meta.xml
<CustomField>
    <fullName>Zip__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Zip</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Leads and Referrals (Zip)</relationshipLabel>
    <relationshipName>Leads_and_Referrals3</relationshipName>
    <type>Lookup</type>
</CustomField>