force-app/main/default/objects/Lead/recordTypes/PBF.recordType-meta.xml
<RecordType>
    <fullName>PBF</fullName>
    <active>true</active>
    <businessProcess>PBF</businessProcess>
    <description>AO/BRO sell PBF product to end customer</description>
    <label>PBF</label>
</RecordType>