force-app/main/default/objects/Lead/validationRules/Birth_Date_Not_Greater_Than_Today.validationRule-meta.xml
<ValidationRule>
    <fullName>Birth_Date_Not_Greater_Than_Today</fullName>
    <active>true</active>
    <errorConditionFormula>Date_of_Birth__c &gt;  TODAY()</errorConditionFormula>
    <errorDisplayField>Date_of_Birth__c</errorDisplayField>
    <errorMessage>Date of Birth cannot be greater than today.</errorMessage>
</ValidationRule>