force-app/main/default/objects/Lead/validationRules/Branch_Not_In_ZIP_Code.validationRule-meta.xml
<ValidationRule>
    <fullName>Branch_Not_In_ZIP_Code</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISNULL(Zip__c)) &amp;&amp; ISCHANGED(Branch__c) &amp;&amp;   NOT(ISBLANK(TEXT(Branch__c))) &amp;&amp; Zip__r.Branch_ID__c !=  TEXT(Branch__c)</errorConditionFormula>
    <errorMessage>Branch ID not match with ZIP Information</errorMessage>
</ValidationRule>