force-app/main/default/objects/Lead/validationRules/Cancel_Reason_Min_3_Characters.validationRule-meta.xml
<ValidationRule>
    <fullName>Cancel_Reason_Min_3_Characters</fullName>
    <active>true</active>
    <description>Rule ketika status diubah ke canceled</description>
    <errorConditionFormula>AND( ISPICKVAL(Status, &quot;Canceled&quot;), OR(ISBLANK(Cancel_Reason__c), LEN(Cancel_Reason__c) &lt; 3 ) )</errorConditionFormula>
    <errorDisplayField>Cancel_Reason__c</errorDisplayField>
    <errorMessage>Please enter at least 3 character</errorMessage>
</ValidationRule>