force-app/main/default/objects/Lead/validationRules/Company_Min_3_Characters.validationRule-meta.xml
<ValidationRule>
    <fullName>Company_Min_3_Characters</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISPICKVAL(Customer_Type__c , &quot;Personal&quot;)),LEN( Company_Name__c ) &lt; 3
)</errorConditionFormula>
    <errorDisplayField>Company_Name__c</errorDisplayField>
    <errorMessage>Please enter at least 3 character</errorMessage>
</ValidationRule>