force-app/main/default/objects/Lead/validationRules/First_Name_Min_3_Character.validationRule-meta.xml
<ValidationRule>
    <fullName>First_Name_Min_3_Character</fullName>
    <active>true</active>
    <errorConditionFormula>IF(ISBLANK( FirstName ), FALSE, LEN(FirstName) &lt; 3)</errorConditionFormula>
    <errorDisplayField>FirstName</errorDisplayField>
    <errorMessage>Please enter at least 3 character</errorMessage>
</ValidationRule>