force-app/main/default/objects/Lead/validationRules/First_Name_Must_Alphabet.validationRule-meta.xml
<ValidationRule>
    <fullName>First_Name_Must_Alphabet</fullName>
    <active>true</active>
    <errorConditionFormula>OR(NOT(REGEX(  FirstName, &quot;^[a-zA-Z ]*$&quot;)))</errorConditionFormula>
    <errorDisplayField>FirstName</errorDisplayField>
    <errorMessage>Number and special character are not allowed, for example / \ :*?&quot;&lt;&gt;|</errorMessage>
</ValidationRule>