force-app/main/default/objects/Lead/validationRules/ID_Number_Must_16_Digits.validationRule-meta.xml
<ValidationRule>
    <fullName>ID_Number_Must_16_Digits</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL( Customer_Type__c , &quot;Personal&quot;) , NOT(REGEX( ID_Number__c , &quot;^[0-9]{16}$&quot;)))</errorConditionFormula>
    <errorDisplayField>ID_Number__c</errorDisplayField>
    <errorMessage>ID Number must be 16 digits</errorMessage>
</ValidationRule>