force-app/main/default/objects/Lead/validationRules/Job_Address_Min_3_Characters.validationRule-meta.xml
<ValidationRule>
    <fullName>Job_Address_Min_3_Characters</fullName>
    <active>true</active>
    <errorConditionFormula>IF(OR(ISBLANK(Job_Address__c), ISNULL(Job_Address__c), Job_Address__c = &quot;&quot;), FALSE, LEN( Job_Address__c ) &lt; 3)</errorConditionFormula>
    <errorDisplayField>Job_Address__c</errorDisplayField>
    <errorMessage>Please enter at least 3 character</errorMessage>
</ValidationRule>