force-app/main/default/objects/Lead/validationRules/LEAD002_Product_Interest_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>LEAD002_Product_Interest_Required</fullName>
    <active>true</active>
    <description>Once Product Interest has been populated, it cannot be cleared.</description>
    <errorConditionFormula>AND(
  NOT( $Permission.Bypass_Lead_Validation_Rules ),
  NOT(ISBLANK(TEXT( PRIORVALUE( ProductInterest__c )))),
  ISBLANK( TEXT( ProductInterest__c ))
)</errorConditionFormula>
    <errorDisplayField>ProductInterest__c</errorDisplayField>
    <errorMessage>Once Product Interest has been populated, it cannot be cleared [LEAD002]</errorMessage>
</ValidationRule>