force-app/main/default/objects/Lead/validationRules/Lead_Change_Owner.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_Change_Owner</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISCHANGED(OwnerId),
    TEXT($User.Occupation__c) = &quot;Staff&quot;
)</errorConditionFormula>
    <errorMessage>Staff Tidak Bisa Change Owner</errorMessage>
</ValidationRule>