force-app/main/default/objects/Lead/validationRules/Lead_Convert.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_Convert</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(IsConverted),
    OR(
        NOT(Task__c), 
        ISBLANK(City__c),
        ISBLANK(Email),
        ISBLANK(Interest_COB__c),
        ISBLANK(Address__c)
    )
)</errorConditionFormula>
    <errorMessage>Field berikut harus diisi 
1. Task (Minimal 3)
2. Email 
3. Cities
4. Interest COB
5. Address</errorMessage>
</ValidationRule>