force-app/main/default/objects/Lead/validationRules/Lead_Notes_Min_3_Characters.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_Notes_Min_3_Characters</fullName>
    <active>true</active>
    <errorConditionFormula>IF(   OR(ISBLANK(Lead_Notes__c),Lead_Notes__c=&quot;&quot;, ISNULL(Lead_Notes__c) )  , FALSE,  LEN(Lead_Notes__c) &lt; 3 )</errorConditionFormula>
    <errorDisplayField>Lead_Notes__c</errorDisplayField>
    <errorMessage>Please enter at least 3 character</errorMessage>
</ValidationRule>