force-app/main/default/objects/Lead/validationRules/Legal_Address_Min_3_Characters.validationRule-meta.xml
<ValidationRule>
    <fullName>Legal_Address_Min_3_Characters</fullName>
    <active>true</active>
    <errorConditionFormula>LEN( Legal_Address__c ) &lt; 3</errorConditionFormula>
    <errorDisplayField>Legal_Address__c</errorDisplayField>
    <errorMessage>Please enter at least 3 character</errorMessage>
</ValidationRule>