force-app/main/default/objects/Lead/validationRules/LJK_Required_If_Take_Over.validationRule-meta.xml
<ValidationRule>
    <fullName>LJK_Required_If_Take_Over</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Is_Take_Over__c = TRUE,  ISPICKVAL( Lembaga_LJK__c , &quot;&quot;) )</errorConditionFormula>
    <errorDisplayField>Lembaga_LJK__c</errorDisplayField>
    <errorMessage>Complete this field.</errorMessage>
</ValidationRule>