force-app/main/default/objects/Lead/validationRules/Monthly_Income_Min_1000000.validationRule-meta.xml
<ValidationRule>
    <fullName>Monthly_Income_Min_1000000</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Customer_Type__c , &quot;Personal&quot;), OR(ISBLANK(Monthly_Income__c), Monthly_Income__c &lt; 1000000))</errorConditionFormula>
    <errorDisplayField>Monthly_Income__c</errorDisplayField>
    <errorMessage>Must be greater than Rp. 1.000.000</errorMessage>
</ValidationRule>