force-app/main/default/objects/Lead/validationRules/Mother_Maiden_Name_Min_3_Character.validationRule-meta.xml
<ValidationRule>
    <fullName>Mother_Maiden_Name_Min_3_Character</fullName>
    <active>true</active>
    <errorConditionFormula>IF(ISBLANK(  Mother_Maiden_Name__c ), FALSE, LEN(Mother_Maiden_Name__c ) &lt; 3)</errorConditionFormula>
    <errorDisplayField>Mother_Maiden_Name__c</errorDisplayField>
    <errorMessage>Please enter at least 3 character</errorMessage>
</ValidationRule>