force-app/main/default/objects/Lead/validationRules/Mother_Maiden_Name_Must_Alphabet.validationRule-meta.xml
<ValidationRule>
    <fullName>Mother_Maiden_Name_Must_Alphabet</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(  Mother_Maiden_Name__c  , &quot;^[a-zA-Z ]*$&quot;))</errorConditionFormula>
    <errorDisplayField>Mother_Maiden_Name__c</errorDisplayField>
    <errorMessage>Number and special character are not allowed, for example / \ :*?&quot;&lt;&gt;|</errorMessage>
</ValidationRule>