force-app/main/default/objects/Lead/validationRules/Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Name</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(
  REGEX( FirstName , &quot;^[^0-9]*$&quot;)
) ||
NOT(
  REGEX( LastName , &quot;^[^0-9]*$&quot;)
)</errorConditionFormula>
    <errorMessage>Nama tidak boleh diisi angka</errorMessage>
</ValidationRule>