force-app/main/default/objects/Lead/validationRules/Name_Min_3_Character.validationRule-meta.xml
<ValidationRule>
    <fullName>Name_Min_3_Character</fullName>
    <active>true</active>
    <errorConditionFormula>IF(ISBLANK( LastName), FALSE, LEN(LastName) &lt; 3)</errorConditionFormula>
    <errorDisplayField>LastName</errorDisplayField>
    <errorMessage>Please enter at least 3 character</errorMessage>
</ValidationRule>