force-app/main/default/objects/Lead/validationRules/Name_Must_Alphabet.validationRule-meta.xml
<ValidationRule>
    <fullName>Name_Must_Alphabet</fullName>
    <active>true</active>
    <errorConditionFormula>OR(NOT(REGEX(  LastName , &quot;^[a-zA-Z ]*$&quot;)))</errorConditionFormula>
    <errorDisplayField>LastName</errorDisplayField>
    <errorMessage>Some character are not allowed, for example / \ :*?&quot;&lt;&gt;|</errorMessage>
</ValidationRule>