force-app/main/default/objects/Lead/validationRules/NPWP_Number_Must_15_or_16_Digits.validationRule-meta.xml
<ValidationRule>
    <fullName>NPWP_Number_Must_15_or_16_Digits</fullName>
    <active>true</active>
    <errorConditionFormula>IF(OR(ISBLANK(NPWP_Number__c ), ISNULL(NPWP_Number__c ),NPWP_Number__c = &quot;&quot;),FALSE, NOT( REGEX( NPWP_Number__c , &quot;^[0-9]{15,16}$&quot;) ))</errorConditionFormula>
    <errorDisplayField>NPWP_Number__c</errorDisplayField>
    <errorMessage>Please input 15 or 16 digit number</errorMessage>
</ValidationRule>