force-app/main/default/objects/Lead/validationRules/Phone2_Min_6_Digits.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone2_Min_6_Digits</fullName>
    <active>true</active>
    <description>Phone 1 number length should be minimal 12 and in digits</description>
    <errorConditionFormula>IF(OR(ISBLANK( Phone_2__c ), ISNULL(Phone_2__c ),Phone_2__c = &quot;&quot;),FALSE, LEN(Phone_2__c ) &lt; 6)</errorConditionFormula>
    <errorDisplayField>Phone_2__c</errorDisplayField>
    <errorMessage>Please enter at least 6 digits</errorMessage>
</ValidationRule>