force-app/main/default/objects/Lead/validationRules/Phone_Min_6_Digits.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Min_6_Digits</fullName>
    <active>true</active>
    <errorConditionFormula>IF(OR(ISBLANK(Phone), ISNULL(Phone),Phone= &quot;&quot;),FALSE, LEN(Phone) &lt; 6)</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Please enter at least 6 digits</errorMessage>
</ValidationRule>