force-app/main/default/objects/Lead/validationRules/Phone_Must_Be_Valid.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Must_Be_Valid</fullName>
    <active>true</active>
    <errorConditionFormula>IF(OR(ISBLANK(Phone), ISNULL(Phone),Phone= &quot;&quot;),FALSE, NOT(REGEX(Phone, &quot;^(\\+?0)(?!0{2,})\\d*$&quot;)))</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Please input correct phone number</errorMessage>
</ValidationRule>