force-app/main/default/objects/Lead/validationRules/Place_of_Birth_Must_Alphabet.validationRule-meta.xml
<ValidationRule>
    <fullName>Place_of_Birth_Must_Alphabet</fullName>
    <active>true</active>
    <errorConditionFormula>OR(NOT(REGEX(  Place_of_Birth__c , &quot;^[a-zA-Z ]*$&quot;)))</errorConditionFormula>
    <errorDisplayField>Place_of_Birth__c</errorDisplayField>
    <errorMessage>Number and special character are not allowed, for example / \ :*?&quot;&lt;&gt;|</errorMessage>
</ValidationRule>