force-app/main/default/objects/Lead/validationRules/Place_of_Established_Min_3_Character.validationRule-meta.xml
<ValidationRule>
    <fullName>Place_of_Established_Min_3_Character</fullName>
    <active>true</active>
    <errorConditionFormula>IF(ISBLANK(  Place_of_Established__c ), FALSE, LEN(Place_of_Established__c ) &lt; 3)</errorConditionFormula>
    <errorDisplayField>Place_of_Established__c</errorDisplayField>
    <errorMessage>Please enter at least 3 character</errorMessage>
</ValidationRule>