force-app/main/default/objects/Lead/validationRules/Spouse_Birth_Date_Not_Greater_Than_Today.validationRule-meta.xml
<ValidationRule>
    <fullName>Spouse_Birth_Date_Not_Greater_Than_Today</fullName>
    <active>true</active>
    <errorConditionFormula>Spouse_Date_of_Birth__c &gt;  TODAY()</errorConditionFormula>
    <errorDisplayField>Spouse_Date_of_Birth__c</errorDisplayField>
    <errorMessage>Spouse date of birth cannot be greater than today.</errorMessage>
</ValidationRule>