force-app/main/default/objects/Lead/validationRules/Spouse_ID_Number_Must_16_Digits.validationRule-meta.xml
<ValidationRule>
    <fullName>Spouse_ID_Number_Must_16_Digits</fullName>
    <active>true</active>
    <errorConditionFormula>IF(OR(ISBLANK(Spouse_ID_Number__c ), ISNULL(Spouse_ID_Number__c ),Spouse_ID_Number__c = &quot;&quot;),FALSE, AND( ISPICKVAL( Marital_Status__c , &quot;KAWIN&quot;),  ISPICKVAL( Customer_Type__c , &quot;Personal&quot;)  , NOT(REGEX(  Spouse_ID_Number__c , &quot;^[0-9]{16}$&quot;))))</errorConditionFormula>
    <errorDisplayField>Spouse_ID_Number__c</errorDisplayField>
    <errorMessage>ID Number must be 16 digits</errorMessage>
</ValidationRule>