force-app/main/default/objects/Lead/validationRules/Spouse_Job_Address_Min_3_Characters.validationRule-meta.xml
<ValidationRule>
    <fullName>Spouse_Job_Address_Min_3_Characters</fullName>
    <active>true</active>
    <errorConditionFormula>IF(   OR(ISBLANK( Spouse_Job_Address__c ),Spouse_Job_Address__c =&quot;&quot;, ISNULL(Spouse_Job_Address__c ) )  , FALSE,  LEN(Spouse_Job_Address__c ) &lt; 3 )</errorConditionFormula>
    <errorDisplayField>Spouse_Job_Address__c</errorDisplayField>
    <errorMessage>Please enter at least 3 character</errorMessage>
</ValidationRule>